--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hot-toast": "^2.1.1",
     "slug": "^5.1.0",
     "swr": "^1.0.1",
+    "timeago.js": "^4.0.2",
     "validator": "^13.6.0"
   },
   "devDependencies": {
